[gd_scene load_steps=38 format=3 uid="uid://clq81jdksbgqb"]

[ext_resource type="Script" uid="uid://drr4abxfrego" path="res://scene/player/player.gd" id="1_6smn3"]
[ext_resource type="Texture2D" uid="uid://y2dry5y600dc" path="res://scene/player/player.png" id="2_5lop3"]
[ext_resource type="Texture2D" uid="uid://ctkkmm5m2p2uh" path="res://scene/player/bullet/bullet.png" id="2_732fb"]
[ext_resource type="Texture2D" uid="uid://baxtoa4h1r08j" path="res://scene/player/item/pickaxe.png" id="3_ajqqa"]
[ext_resource type="Texture2D" uid="uid://c7ieghbmjeosr" path="res://scene/player/item/revolver.png" id="4_5lop3"]
[ext_resource type="Texture2D" uid="uid://hx4mw6spmd8u" path="res://particle.png" id="5_ajqqa"]
[ext_resource type="Texture2D" uid="uid://cjo60yjhlqeiw" path="res://particle_green.png" id="6_rkmeh"]
[ext_resource type="AudioStream" uid="uid://e4kdsl4irr1e" path="res://scene/player/sound/jump.wav" id="8_1wtbu"]
[ext_resource type="Texture2D" uid="uid://b1hh7saxsvy15" path="res://scene/player/explosion_depleted.png" id="8_p3aiu"]
[ext_resource type="AudioStream" uid="uid://wc6iuefhdjm2" path="res://scene/player/sound/mine.wav" id="9_p3aiu"]
[ext_resource type="AudioStream" uid="uid://iljjp4rbbx6d" path="res://scene/player/sound/mine_gem.wav" id="10_f5r2w"]
[ext_resource type="AudioStream" uid="uid://de3n6nbf4dvj2" path="res://scene/player/sound/shoot.wav" id="11_oen5c"]
[ext_resource type="AudioStream" uid="uid://bwgb3rbgbgve2" path="res://scene/player/sound/upgrade.wav" id="12_5g408"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rkmeh"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_hfhxk"]
offsets = PackedFloat32Array(0, 0.527472, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.719019, 0.396703, 0.374015, 1, 0.501961, 0.501961, 0.501961, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pisg7"]
gradient = SubResource("Gradient_hfhxk")

[sub_resource type="Curve" id="Curve_oypl4"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -4.63807, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qjg4s"]
curve = SubResource("Curve_oypl4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1wtbu"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 40.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_qjg4s")
color_ramp = SubResource("GradientTexture1D_pisg7")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hfhxk"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_732fb"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(4, 4, 0)
direction = Vector3(0, -1, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 0.8
anim_speed_max = 2.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_732fb"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_rkmeh"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_732fb"]
gradient = SubResource("Gradient_rkmeh")

[sub_resource type="Curve" id="Curve_hfhxk"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 14.5841, 0, 0, Vector2(0.727774, 23.7539), 124.73, 124.73, 0, 0, Vector2(1, 93.9138), 646.647, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_pisg7"]
curve = SubResource("Curve_hfhxk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hfhxk"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
damping_min = 10.0
damping_max = 20.0
damping_curve = SubResource("CurveTexture_pisg7")
color_ramp = SubResource("GradientTexture1D_732fb")
anim_speed_min = 0.8
anim_speed_max = 2.0

[sub_resource type="Gradient" id="Gradient_ufpdr"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gyatu"]
gradient = SubResource("Gradient_ufpdr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f5r2w"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 10.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_gyatu")

[sub_resource type="Gradient" id="Gradient_732fb"]
offsets = PackedFloat32Array(0.314423, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5lop3"]
gradient = SubResource("Gradient_732fb")
width = 96
height = 96
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_6smn3"]
radius = 3.04138

[sub_resource type="Animation" id="Animation_hfhxk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Pickaxe:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Pickaxe:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Revolver:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_732fb"]
resource_name = "mine_forward"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Pickaxe:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Pickaxe:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_rkmeh"]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Revolver:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pisg7"]
_data = {
&"RESET": SubResource("Animation_hfhxk"),
&"mine_forward": SubResource("Animation_732fb"),
&"shoot": SubResource("Animation_rkmeh")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_6smn3")

[node name="JetpackParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rkmeh")
position = Vector2(0, 6)
emitting = false
amount = 32
texture = ExtResource("2_732fb")
process_material = SubResource("ParticleProcessMaterial_1wtbu")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_5lop3")

[node name="Pickaxe" type="Sprite2D" parent="Sprite"]
texture = ExtResource("3_ajqqa")
offset = Vector2(-5, 0)

[node name="Revolver" type="Sprite2D" parent="Sprite"]
visible = false
texture = ExtResource("4_5lop3")
offset = Vector2(5, 0)

[node name="DeathParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_hfhxk")
emitting = false
texture = ExtResource("5_ajqqa")
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_732fb")

[node name="UpgradeParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_732fb")
emitting = false
amount = 4
texture = ExtResource("6_rkmeh")
lifetime = 1.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_hfhxk")

[node name="ExplosiveDepletedParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -8)
emitting = false
amount = 1
texture = ExtResource("8_p3aiu")
lifetime = 2.0
one_shot = true
process_material = SubResource("ParticleProcessMaterial_f5r2w")

[node name="PointLight2D" type="PointLight2D" parent="."]
blend_mode = 2
texture = SubResource("GradientTexture2D_5lop3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("CircleShape2D_6smn3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pisg7")
}

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_1wtbu")
volume_db = -1.0

[node name="MineAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_p3aiu")

[node name="MineGemAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_f5r2w")

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_oen5c")

[node name="UpgradeAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_5g408")
